# Leprechaun

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
3party/: CMakeLists.txt
3party/glad/: CMakeLists.txt  INFO.txt  SOURCE.txt
3party/glad/include/glad/: glad.h
3party/glad/src/: glad.c
LeprechaunLib/: CMakeLists.txt  main.cpp
LeprechaunLib/include/: BaseApplication.h
LeprechaunLib/include/Input/: Input.h  InputUtils.h
LeprechaunLib/include/Log/: Log.h  Logger.h
LeprechaunLib/include/Render/: ApiDevice.h  Device.h  RenderApiBackendAbstraction.h  VulkanApiBackend.h
LeprechaunLib/include/Render/gapi_vk/: VulkanApiDevice.h
LeprechaunLib/include/Renderer/: Shader.h  Texture.h
LeprechaunLib/include/Window/: ApplicationConfig.h  Window.h
LeprechaunLib/src/: BaseApplication.cpp
LeprechaunLib/src/Input/: Input.cpp
LeprechaunLib/src/Log/: Logger.cpp
LeprechaunLib/src/Render/: Device.cpp  VulkanApiBackend.cpp
LeprechaunLib/src/Render/gapi_vk/: VulkanApiDevice.cpp
LeprechaunLib/src/Renderer/: Shader.cpp  Texture.cpp
LeprechaunLib/src/Window/: Window.cpp
demo/: CMakeLists.txt  main.cpp
